# krylov

./: .flake8  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  setup.cfg  tox.ini
.github/workflows/: ci.yml
krylov/: __init__.py  _convenience.py  _helpers.py  arnoldi.py  bicg.py  cg.py  deflation.py  errors.py  givens.py  gmres.py  householder.py  linear_operator.py  linear_system.py  linsys.py  minres.py  projection.py  ritz.py  utils.py
krylov/recycling/: evaluators.py  factories.py  linsys.py
src/krylov/: __about__.py  __init__.py  _helpers.py  arnoldi.py  bicg.py  bicgstab.py  cg.py  cgne.py  cgnr.py  cgr.py  cgs.py  chebyshev.py  errors.py  gauss_seidel.py  gcr.py  givens.py  gmres.py  householder.py  jacobi.py  minres.py  qmr.py  richardson.py  stationary.py  symmlq.py  utils.py
test/: helpers.py  linear_problems.py  test_arnoldi.py  test_bicg.py  test_bicgstab.py  test_cg.py  test_convenience_wrappers.py  test_deflation.py  test_givens.py  test_gmres.py  test_householder.py  test_linsys.py  test_minres.py  test_projection.py  test_recycling.py  test_ritz.py  test_solvers.py  test_utils.py
tests/: helpers.py  linear_problems.py  test_arnoldi.py  test_bicg.py  test_bicgstab.py  test_cg.py  test_cgne.py  test_cgnr.py  test_cgr.py  test_cgs.py  test_chebyshev.py  test_gauss_seidel.py  test_gcr.py  test_givens.py  test_gmres.py  test_householder.py  test_jacobi.py  test_minres.py  test_qmr.py  test_richardson.py  test_solvers.py  test_sor.py  test_ssor.py  test_symmlq.py
