[metadata]
name = krylov
version = 0.0.2
author = André Gaul, Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Krylov subspace methods for Python
url = https://github.com/nschloe/krylov
project_urls =
    Code=https://github.com/nschloe/krylov
    Issues=https://github.com/nschloe/krylov/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy >= 1.20.0
    scipy
    typing_extensions;python_version<"3.8"
python_requires = >=3.6

[options.packages.find]
where=src

[options.extras_require]
all =
    scipy
